sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:17: error: not found: value break
  if(!permute) break;
               ^